@@ -5,6 +5,10 @@
 
 2012-06-06  6.7.7-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Small refactor of Average Interpolators (save some multiplies)
+  * Added 'Spline' as a filter type as an alias to 'Cubic'. this brings both
+    Catrom and Spline -filter and -interpolate methods in line.  Cubic should
+    only be used when defining a general cubic using expert settings or
+    when listed in "filter:verbose" debugging output.
 
 2012-06-05  6.7.7-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-6, SVN revision 8164.
